@@ -1,3 +1,7 @@
+2017-11-06 Magnus Hagdorn
+ * piccolo2/client/__init__.py: set __version__
+ * setup.py: get version from hg tag
+
 2017-02-22 Magnus Hagdorn
  * piccolo2/client/PiccoloBaseClient.py: the client requests and stores a 
    listener ID which is used for client specific messages
